--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,27 @@
-:root {--primary-bg-color: #502712; --secondary-bg-color: #fff; --accent-color: #000;}
+:root {--primary-color: #502712; --secondary-color: #fff; --accent-color: #000;}
 
 @media all {
 
-    body {font: 400 18/1.3 'PT Sans', sans-serif;}
+    body {font: 400 18px/1.3 'PT Sans', sans-serif; position: relative; margin: 0; padding: 0;}
+    header, nav, main, section, aside, footer, div {box-sizing: border-box;}
 
 }
 
 @media screen {
+
+    a:focus {outline: 2px solid var(--primary-color); outline-offset: 3px;}
+    
+    /* Masthead */
+    #jump {display: none; position: absolute; top: 10px; left: 10px;}
+    #jump:focus {color: #000; }
+    #logo {background: url(../images/caturra-coffee-logo.webp) no-repeat center / cover; height: 75px; width: 193px; display: block;}
+    header {padding: 30px 0;}
+    header nav ul {list-style: none; padding: 0;}
+    header nav li {display: block; float: left; padding: 12px 0;}
+    header .left-nav li {margin-right: 30px;}
+    header .right-nav li{margin-left: 30px;}
+    header a {font-size: 16px; color: var(--primary-color);}
+    header a:focus {color: #000;}
 
 }
 
