--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@
     /* Masthead */
     #jump {display: none; position: absolute; top: 10px; left: 10px;}
     #jump:focus {color: #000; }
-    #logo {background: url(../images/caturra-coffee-logo.webp) no-repeat center / cover; height: 75px; width: 193px; display: block;}
+    #logo {background: url(../images/caturra-coffee-logo.webp) no-repeat center / cover; height: 75px; width: 193px; display: block; margin-left: 1px;}
     header {padding: 30px 0;}
     header nav ul {list-style: none; padding: 0;}
     header nav li {display: block; float: left; padding: 12px 0;}
