--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,9 @@
 
     main .bar {height: 20px; background: #502712;}
     main .hero-1 {background: url(../images/caturra-coffee-hero-image.webp) no-repeat center / cover; min-height: 454px; width: auto;}
-    
+    .views {margin: 60px auto;}
+    .views h1 {font-weight: 700; font-size: 24px; line-height: 1.3;}
+    .views .content {background: var(--primary-color);}
 }
 
 @media screen and (max-width: 1200px) {
