--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,10 @@
     main .hero-1 {background: url(../images/caturra-coffee-hero-image.webp) no-repeat center / cover; min-height: 454px; width: auto;}
     .views {margin: 60px auto;}
     .views h1 {font-weight: 700; font-size: 24px; line-height: 1.3;}
-    .views .content {background: var(--primary-color);}
+    .views .content {background: var(--primary-color); padding: 40px 20px; height: 280px;}
+    .views h1, .views p, .views a {color: var(--secondary-color); text-align: center;}
+    .views p {margin-top: 9px; line-height: 1.8;}
+    .views a {margin: 29px auto 0; display: block; font-variant: small-caps; font-size: 22px;}
 }
 
 @media screen and (max-width: 1200px) {
