--- a/css/main.css
+++ b/css/main.css
@@ -24,13 +24,16 @@
     header a:focus {color: #000;}
 
     main .bar {height: 20px; background: #502712;}
-    main .hero-1 {background: url(../images/caturra-coffee-hero-image.webp) no-repeat center / cover; min-height: 454px; width: auto;}
-    .views {margin: 60px auto;}
+    #hero-1 {background: url(../images/caturra-coffee-hero-image.webp) no-repeat center / cover; min-height: 454px; width: auto;}
+
+    .views {margin: 60px auto 37px;}
     .views h1 {font-weight: 700; font-size: 24px; line-height: 1.3;}
     .views .content {background: var(--primary-color); padding: 40px 20px; height: 280px;}
     .views h1, .views p, .views a {color: var(--secondary-color); text-align: center;}
     .views p {margin-top: 9px; line-height: 1.8;}
     .views a {margin: 29px auto 0; display: block; font-variant: small-caps; font-size: 22px;}
+
+    #hero-2 {background: url(../images/caturra-coffee-view-to-street.webp) no-repeat center / cover; min-height: 590px; width: auto;}
 }
 
 @media screen and (max-width: 1200px) {
