--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,15 @@
     .views a {margin: 29px auto 0; display: block; font-variant: small-caps; font-size: 22px;}
 
     #hero-2 {background: url(../images/caturra-coffee-view-to-street.webp) no-repeat center / cover; min-height: 590px; width: auto;}
+
+    .menu {margin-top: 62px; position: relative;}
+    .menu .line {position: absolute; top: 39px; border: 0px solid var(--primary-color); width: 100%; height: 1px; border-width: 1px 0 0; z-index: -1}
+    .menu h1 {font-size: 34.5px; color: #fff; background: #502712; padding: 18px 0 24px; font-variant: small-caps; text-align: center;}
+    .menu-items {margin-top: 21px;}
+    .menu h2 {font-size: 27px; color: #502712; margin: 15px 0 0; font-variant: small-caps;}
+    .menu-items ul {list-style: none; padding: 0;}
+    .menu-items li {margin-top: 15px;}
+    .menu .container-xl {border-bottom: 1px solid var(--primary-color); padding-bottom: 60px;}
 }
 
 @media screen and (max-width: 1200px) {
