--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@
 
     #hero-2 {background: url(../images/caturra-coffee-view-to-street.webp) no-repeat center / cover; min-height: 590px; width: auto;}
 
-    .menu {margin-top: 62px; position: relative;}
+    .menu {margin: 62px 0 60px; position: relative;}
     .menu .line {position: absolute; top: 39px; border: 0px solid var(--primary-color); width: 100%; height: 1px; border-width: 1px 0 0; z-index: -1}
     .menu h1 {font-size: 34.5px; color: #fff; background: #502712; padding: 18px 0 24px; font-variant: small-caps; text-align: center;}
     .menu-items {margin-top: 21px;}
@@ -43,6 +43,17 @@
     .menu-items ul {list-style: none; padding: 0;}
     .menu-items li {margin-top: 15px;}
     .menu .container-xl {border-bottom: 1px solid var(--primary-color); padding-bottom: 60px;}
+
+    #chemex {background: url(../images/chemex-top-rated-brewing-method.webp) no-repeat center / cover; min-height: 461px; max-width: 709px; display: block; margin: 0 auto;}
+
+    footer {padding: 50px 0 35px; background: #502712; margin-top: 59px; color: var(--secondary-color); font-size: 16px;}
+    footer p {margin: 0;}
+    footer .hours {margin-top: 16px;}
+    .icon {width: 50px; min-height: 52px; display: block; float: left;}
+    #instagram-icon {background: url(../images/social-media-icons.webp) no-repeat;}
+    #twitter-icon {background: url(../images/social-media-icons.webp) no-repeat;}
+    #facebook-icon {background: url(../images/social-media-icons.webp) no-repeat;}
+    .clear {clear: left;}
 }
 
 @media screen and (max-width: 1200px) {
