Implemented 1070px breakpoint styling

--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,9 @@
 
 @media screen and (max-width: 1070px) {
 
+    header .left-nav li {margin-right: 20px;}
+    header .right-nav li {margin-left: 20px;}
+
 }
 
 @media screen and (max-width: 992px) {
