--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@
     #jump {display: none; position: absolute; top: 10px; left: 10px;}
     #jump:focus {color: #000; }
     #logo {background: url(../images/caturra-coffee-logo.webp) no-repeat center / cover; height: 75px; width: 193px; display: block; margin-left: 1px;}
+    header form {display: none;}
     header {padding: 30px 0;}
     header nav ul {list-style: none; padding: 0;}
     header nav li {display: block; float: left; padding: 12px 0;}
@@ -77,8 +78,18 @@
     footer .col-sm-6:nth-child(n + 3) {margin-top: 30px;}
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 783px) {
 
+    header nav {display: none;}
+    header form {display: block; margin-top: 30px;}
+    header select {width: 100%;}
+    header .col-12 {width: 67%;}
+    #logo {height: 75px; width: 193px; margin: 20px auto 0;}
+
+    .views .col-md-4:nth-child(n + 2) {margin-top: 30px;}
+
+    .menu .container-xl .menu-items:last-child {margin-top: 9px;}
+    .menu .container-xl .menu-items:last-child li {margin-top: 14px;}
 }
 
 @media screen and (max-width: 576px) {
