--- a/css/main.css
+++ b/css/main.css
@@ -109,13 +109,17 @@
 
 @media print {
 
-    a {color: #000;}
-    body {font-size: 15pt;}
+    body, a {font-size: 15pt; color: #000;}
     h1 {font-size: 20pt;}
     h2 {font-size: 17pt;}
     #jump, header nav, header form, #hero-2, .menu .line {display: none;}
 
-    .views {margin-top: 40px;}
+    #logo {color: #000;}
+    .views {margin-top: 40px;} 
+    .menu {margin-top: 40px;}
+    .views .content {margin-top: 20px;}
+    .menu ul {list-style: none; padding: 0;}
+    .menu {border-bottom: 1px solid #000; padding-bottom: 40px;}
 
     footer .row div {display: block; width:100%;}
 }
