--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@
     main .bar {height: 20px; background: #502712;}
     #hero-1 {background: url(../images/caturra-coffee-hero-image.webp) no-repeat center / cover; min-height: 454px; width: auto;}
 
-    .views {margin: 60px auto 37px;}
+    .views {margin: 60px auto;}
     .views h1 {font-weight: 700; font-size: 24px; line-height: 1.3;}
     .views .content {background: var(--primary-color); padding: 40px 20px; height: 280px;}
     .views h1, .views p, .views a {color: var(--secondary-color); text-align: center;}
@@ -56,7 +56,7 @@
     .icon {width: 50px; min-height: 52px; display: block; float: left; margin-right: 15px}
     #instagram-icon {background: url(../images/social-media-icons.webp) no-repeat;}
     #twitter-icon {background: url(../images/social-media-icons.webp) no-repeat -65px;}
-    #facebook-icon {background: url(../images/social-media-icons.webp) no-repeat -130px;}
+    #facebook-icon {background: url(../images/social-media-icons.webp) no-repeat -128px;}
     .clear {clear: left;}
     footer p[role*="contentinfo"] {margin-top: 15px;}
 }
