Changed logo width to auto at 783px breakpoint

--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,7 @@
     header form {display: block; margin-top: 30px;}
     header select {width: 100%;}
     header .col-12 {width: 67%;}
-    #logo {height: 75px; width: 193px; margin: 20px auto 0;}
+    #logo {height: 75px; margin: 20px auto 0;}
 
 }
 
