--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-:root {--primary-color: #502712; --secondary-color: #fff; --accent-color: #000;}
 
 @media all {
 
@@ -10,9 +9,11 @@
 
 @media screen {
 
+    /* General */
+    :root {--primary-color: #502712; --secondary-color: #fff; --accent-color: #000;}
     a:focus {outline: 2px solid var(--primary-color); outline-offset: 3px;}
-    .views a, footer .icon {outline-color: var(--secondary-color); }
     .image-descr {font-size: 0; width: 0; height: 0;}
+    .views a, footer .icon {outline-color: var(--secondary-color);}
 
     /* Masthead */
     #jump {position: absolute; top: 10px; left: 10px; font-size: 0;}
@@ -27,9 +28,11 @@
     header a {font-size: 16px; color: var(--primary-color);}
     header a:hover {color: #000;}
 
+    /* First hero */
     main .bar {height: 20px; background: #502712;}
     #hero-1 {background: url(../images/caturra-coffee-hero-image.webp) no-repeat center / cover; min-height: 454px; width: auto;}
 
+    /* Views */
     .views {margin: 60px auto;}
     .views h1 {font-weight: 700; font-size: 24px; line-height: 1.3;}
     .views .content {background: var(--primary-color); padding: 40px 20px; height: 280px;}
@@ -37,8 +40,10 @@
     .views p {margin-top: 9px; line-height: 1.8;}
     .views a {margin: 29px auto 0; display: block; font-variant: all-small-caps; font-size: 22px;}
 
+    /* Second hero */
     #hero-2 {background: url(../images/caturra-coffee-view-to-street.webp) no-repeat center / cover; min-height: 590px; width: auto;}
 
+    /* New Menu items */
     .menu {margin: 62px 0 60px; position: relative;}
     .menu .line {position: absolute; top: 39px; border: 0px solid var(--primary-color); width: 100%; height: 1px; border-width: 1px 0 0; z-index: -1}
     .menu h1 {font-size: 34.5px; color: #fff; background: #502712; padding: 18px 0 24px; font-variant: all-small-caps; text-align: center;}
@@ -48,8 +53,10 @@
     .menu-items li {margin-top: 15px;}
     .menu .container-xl {border-bottom: 1px solid var(--primary-color); padding-bottom: 60px;}
 
+    /* Second hero */
     #chemex img {min-height: 461px; max-width: 709px; display: block; margin: 0 auto;}
 
+    /* Footer */
     footer {padding: 50px 0 35px; background: #502712; margin-top: 59px; color: var(--secondary-color); font-size: 16px;}
     footer p {margin: 0;}
     footer .hours {margin-top: 16px;}
@@ -59,14 +66,12 @@
     #facebook-icon {background: url(../images/social-media-icons.webp) no-repeat -128px;}
     .clear {clear: left;}
     footer p[role*="contentinfo"] {margin-top: 15px;}
-}
-
-@media screen and (max-width: 1200px) {
 
 }
 
 @media screen and (max-width: 1070px) {
 
+    /* Masthead */
     header .left-nav li {margin-right: 20px;}
     header .right-nav li {margin-left: 20px;}
 
@@ -74,15 +79,22 @@
 
 @media screen and (max-width: 992px) {
 
+    /* Masthead */
     header {padding-top: 12px;}
     #logo {width: auto; height: 53px; margin: 18px 0 0 2px;}
+
+    /* Views */
     .views {margin-bottom: 90px;}
     .views .content {height: auto; padding-bottom: 60px;}
+
+    /* Footer */
     footer .col-sm-6:nth-child(n + 3) {margin-top: 30px;}
+
 }
 
 @media screen and (max-width: 783px) {
 
+    /* Masthead */
     header nav {display: none;}
     header form {display: block; margin-top: 30px;}
     header select {width: 100%;}
@@ -93,11 +105,14 @@
 
 @media screen and (max-width: 768px) {
     
+    /* Views */
     .views .col-md-4:nth-child(n + 2) {margin-top: 30px;}
 
+    /* menu items */
     .menu .container-xl .menu-items:last-child {margin-top: 9px;}
     .menu .container-xl .menu-items:last-child li {margin-top: 14px;}
 
+    /* second hero */
     #chemex img {min-height: auto; width: 100%;}
     #chemex {padding: 0 15px; display: block;}
 
@@ -105,23 +120,30 @@
 
 @media screen and (max-width: 576px) {
 
+    /* Footer */
     footer {padding-bottom: 50px;}
     footer .row .col-sm-6:nth-child(n + 2) {margin-top: 30px;}
+
 }
 
 @media print {
 
+    /* General */
+    #jump, header nav, header form, #hero-2, .menu .line, #chemex, .image-descr {display: none;}
     body, a {font-size: 15pt; color: #000;}
     h1 {font-size: 20pt;}
     h2 {font-size: 17pt;}
-    #jump, header nav, header form, #hero-2, .menu .line, #chemex, .image-descr {display: none;}
-    #logo {color: #000;}
-    .views {margin-top: 40px;} 
-    .menu {margin-top: 40px;}
-    .views .content {margin-top: 20px;}
-    .menu ul {list-style: none; padding: 0;}
-    .menu {border-bottom: 1px solid #000; padding-bottom: 40px;}
 
+    /* Views */
+    .views {margin-top: 15pt;}
+    .views .content {margin-top: 20pt;}
+
+    /* Menu items */
+    .menu {border-bottom: 1px solid #000; padding-bottom: 20pt; margin-top: 40pt;}
+    .menu ul {list-style: none; padding: 0;}
+
+    /* Footer */
     footer .row div {display: block; width:100%;}
+
 }
 
