--- a/css/main.css
+++ b/css/main.css
@@ -16,17 +16,18 @@
     .views a, footer .icon {outline-color: var(--secondary-color);}
 
     /* Masthead */
+    #jump, #logo, header nav li {display: block;}
     #jump {position: absolute; top: 10px; left: 10px; font-size: 0;}
-    #jump:focus {color: #000; display: block; font-size: inherit;}
-    #logo {height: 75px; width: 193px; display: block; margin-left: 1px;}
-    header form {display: none;}
+    #jump:focus {color: var(--accent-color); font-size: inherit;}
+    #logo {height: 75px; width: 193px; margin-left: 1px;}
     header {padding: 30px 0;}
+    header form {display: none;}
     header nav ul {list-style: none; padding: 0;}
-    header nav li {display: block; float: left; padding: 12px 0;}
+    header nav li {float: left; padding: 12px 0;}
     header .left-nav li {margin-right: 30px;}
     header .right-nav li{margin-left: 30px;}
     header a {font-size: 16px; color: var(--primary-color);}
-    header a:hover {color: #000;}
+    header a:hover {color: var(--accent-color);}
 
     /* First hero */
     main .bar {height: 20px; background: #502712;}
