Condensed remaining styles and switched out hardcoded colors with variables

--- a/css/main.css
+++ b/css/main.css
@@ -14,8 +14,9 @@
     a:focus {outline: 2px solid var(--primary-color); outline-offset: 3px;}
     .hero {background: no-repeat center / cover; width: auto;}
     .image-descr {font-size: 0; width: 0; height: 0;}
-    #jump, #logo, header nav li, .views a {display: block;}
+    #jump, #logo, header nav li, .views a, #chemex img, .icon {display: block;}
     .views a, footer .icon {outline-color: var(--secondary-color);}
+    .views a, .menu h1, .menu h2 {font-variant: all-small-caps;}
 
     /* Masthead */
     #jump {position: absolute; top: 10px; left: 10px; font-size: 0;}
@@ -40,7 +41,7 @@
     .views h1, .views p, .views a {color: var(--secondary-color); text-align: center;}
     .views .content {background: var(--primary-color); padding: 40px 20px; height: 280px;}
     .views p {margin-top: 9px; line-height: 1.8;}
-    .views a {margin: 29px auto 0; font-variant: all-small-caps; font-size: 22px;}
+    .views a {margin: 29px auto 0; font-size: 22px;}
 
     /* Second hero */
     #hero-2 {background: url(../images/caturra-coffee-view-to-street.webp); min-height: 590px;}
@@ -48,24 +49,24 @@
     /* New Menu items */
     .menu {margin: 62px 0 60px; position: relative;}
     .menu .line {position: absolute; top: 39px; border: 0px solid var(--primary-color); width: 100%; height: 1px; border-width: 1px 0 0; z-index: -1}
-    .menu h1 {font-size: 34.5px; color: #fff; background: #502712; padding: 18px 0 24px; font-variant: all-small-caps; text-align: center;}
+    .menu h1 {font-size: 34.5px; color: var(--secondary-color); background: var(--primary-color); padding: 18px 0 24px; text-align: center;}
     .menu-items {margin-top: 21px;}
-    .menu h2 {font-size: 27px; color: #502712; margin: 15px 0 0; font-variant: all-small-caps;}
+    .menu h2 {font-size: 27px; color: var(--primary-color); margin: 15px 0 0;}
     .menu-items ul {list-style: none; padding: 0;}
     .menu-items li {margin-top: 15px;}
     .menu .container-xl {border-bottom: 1px solid var(--primary-color); padding-bottom: 60px;}
 
     /* Second hero */
-    #chemex img {min-height: 461px; max-width: 709px; display: block; margin: 0 auto;}
+    #chemex img {min-height: 461px; max-width: 709px; margin: 0 auto;}
 
     /* Footer */
-    footer {padding: 50px 0 35px; background: #502712; margin-top: 59px; color: var(--secondary-color); font-size: 16px;}
+    footer {padding: 50px 0 35px; background: var(--primary-color); margin-top: 59px; color: var(--secondary-color); font-size: 16px;}
     footer p {margin: 0;}
     footer .hours {margin-top: 16px;}
-    .icon {width: 50px; min-height: 52px; display: block; float: left; margin-right: 15px}
-    #instagram-icon {background: url(../images/social-media-icons.webp) no-repeat;}
-    #twitter-icon {background: url(../images/social-media-icons.webp) no-repeat -65px;}
-    #facebook-icon {background: url(../images/social-media-icons.webp) no-repeat -128px;}
+    .icon {width: 50px; min-height: 52px; float: left; margin-right: 15px; background-repeat: no-repeat;}
+    #instagram-icon {background: url(../images/social-media-icons.webp)}
+    #twitter-icon {background: url(../images/social-media-icons.webp) -65px;}
+    #facebook-icon {background: url(../images/social-media-icons.webp) -128px;}
     .clear {clear: left;}
     footer p[role*="contentinfo"] {margin-top: 15px;}
 
