--- a/css/main.css
+++ b/css/main.css
@@ -47,9 +47,9 @@
     #hero-2 {background: url(../images/caturra-coffee-view-to-street.webp) no-repeat center / cover; min-height: 590px;}
 
     /* New Menu items */
-    .menu {margin: 62px 0 60px; position: relative;}
+    .menu {margin: 60px 0 60px; position: relative;}
     .menu .line {position: absolute; top: 39px; border: 0px solid var(--primary-color); width: 100%; height: 1px; border-width: 1px 0 0; z-index: -1}
-    .menu h1 {font-size: 34.5px; color: var(--secondary-color); background: var(--primary-color); padding: 18px 0 24px; text-align: center;}
+    .menu h1 {font-size: 28px; color: var(--secondary-color); background: var(--primary-color); padding: 24px; text-align: center;}
     .menu-items {margin-top: 21px;}
     .menu h2 {font-size: 27px; color: var(--primary-color); margin: 15px 0 0;}
     .menu-items ul {list-style: none; padding: 0;}
